# triton2

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: spack-ubuntu.yml
Triton2/: CMakeLists.txt  triton2Config.cmake.in
Triton2/inc/Triton2/Core/: Delaunay2D.h  Delaunay2D.t.h  DelaunayMesher.h  DelaunayMesher.t.h  GeomToolKit.h  GeomToolKit.t.h  RobustGeomToolKit.h  RobustPredicates.h
Triton2/inc/Triton2/NetgenInterface/: NetgenFacade.h
Triton2/inc/Triton2/TetgenInterface/: TetgenFacade.h
Triton2/src/: NetgenFacade.cpp  TetgenFacade.cpp
src/NetgenLib/: CMakeLists.txt  cmpnt.xml
src/NetgenLib/general/: myadt.hpp
src/NetgenLib/gprim/: adtree.hpp
src/NetgenLib/linalg/: linalg.hpp
src/NetgenLib/meshing/: meshclass.hpp  meshing.hpp  msghandler.cpp  msghandler.hpp
src/NetgenLib/nglib/: nglib.cpp  nglib_addon.cpp
src/NetgenLib/occ/: Partition_Inter2d.cxx  Partition_Inter3d.cxx  Partition_Loop.cxx  Partition_Loop2d.cxx  Partition_Loop3d.cxx  Partition_Spliter.cxx  occconstruction.cpp  occgenmesh.cpp  occgeom.cpp  occgeom.hpp  occmeshsurf.cpp  occmeshsurf.hpp
src/NetgenLib/public/: mystdlib.h
src/NetgenLib/public/NetgenLib/nglib/: nglib.h  nglib_addon.h
src/Test/: Delaunay2DTestSuite.cpp  EdgeLength2DTestSuite.cpp  GeomToolKitTestSuite.cpp  NetgenFacadeTestSuite.cpp  RobustGeomToolKitTestSuite.cpp  TetgenFacadeTestSuite.cpp  TritonUnitTestsLauncher.cpp  cmpnt.xml  test.out
src/Test/protected/: Delaunay2DTestSuite.h  EdgeLength2DTestSuite.h  GeomToolKitTestSuite.h  NetgenFacadeTestSuite.h  RobustGeomToolKitTestSuite.h  TetgenFacadeTestSuite.h
src/TriQuadLayer/: cmpnt.xml  main.cpp
src/TritonForMagix/: TritonPluginAPI.cpp  cmpnt.xml
src/TritonForMagix/public/: TritonPluginAPI.h  plugin.cpp
src/splitTri2Quad/: cmpnt.xml  main.cpp
test_link/: CMakeLists.txt  main.cpp
